register and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Liquibase Configuration
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+#EMAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=caophat113@gmail.com
+spring.mail.password=bdtnbjoxwzlolpcd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
