--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,15 @@
-# PostgreSQL DataSource Configuration
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=db/changelog/changelog-master.xml
+
+# PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/libraryManagement
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-
-#Liquibase Configuration
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
-
-#EMAIL CONFIGURATION
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=caophat113@gmail.com
-spring.mail.password=bdtnbjoxwzlolpcd
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
