--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,18 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.32</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.libphonenumber/libphonenumber -->
+		<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>8.13.27</version>
+		</dependency>
 
 
 	</dependencies>
