--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=caophat113@gmail.com
-spring.mail.password=uuehxkwdtcjpbfbe
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
