--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#default mapping
+default-mapping =/api/v1
+
 # Liquibase Configuration
 spring.liquibase.enabled=true
 spring.liquibase.change-log=db/changelog/changelog-master.xml
