added authorization for ROLE_USER, ROLE_ADMIN

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #default mapping
 default-mapping =/api/v1
+admin-mapping = /api/v1/admin
+user-mapping = /api/v1/user
 
 # Liquibase Configuration
 spring.liquibase.enabled=true
