--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
 			<artifactId>googleauth</artifactId>
 			<version>1.2.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>9.15.1</version>
+		</dependency>
+
 
 	</dependencies>
 
