--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.4.2.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/tech.jhipster/jhipster-framework -->
+		<dependency>
+			<groupId>tech.jhipster</groupId>
+			<artifactId>jhipster-framework</artifactId>
+			<version>8.1.0</version>
+		</dependency>
+
 
 
 	</dependencies>
