--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.open-in-view=false
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
+spring.mail.username=caophat113@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
