--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 			<version>6.4.2.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version> <!-- Use the latest version -->
+		</dependency>
 
 	</dependencies>
 	<build>
