--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ common-mapping=/api/v1/common
 admin-mapping=/api/v1/admin
 user-mapping=/api/v1/user
 
+# Maximum file size for file uploads
+spring.servlet.multipart.max-file-size=5MB
+# Maximum request size including file data
+spring.servlet.multipart.max-request-size=5MB
+
+#Directories
+img.upload.dir=src/main/resources/images/bookcover
+img.default.book-cover=src/main/resources/images/bookcover/default_book_cover.jpg
+
 #Link
 verify-link=http://localhost:8080/api/v1/registration/confirm?token=
 email-link=http://localhost:8080/api/v1/registration/confirm?token=
