--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,23 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.4</version> <!-- Use the latest version -->
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version> <!-- or the latest version available -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version> <!-- or the latest version available -->
+		</dependency>
 
 	</dependencies>
 	<build>
