added borrow book

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,14 +29,15 @@ spring.jpa.open-in-view=false
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=caophat113@gmail.com
+spring.mail.password=gkayaxnsmdcelerp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Confirmation mail template
 confirmation-template=confirmationMail.ftl
 mail-subject-confirmation=CONFIRMATION MAIL
 mail-subject-reset-password=RESET PASSWORD CONFIRMATION MAIL
+mail-subject-invoice=Borrow Book Invoice
 # Twilio Configuration
 account-sid=ACe99c6c65a2a372df0211c08dc5b8f643
 auth-token=ab7b1b6908f3b42ed69baeb223b68bbe
